# python-nut3

./: .gitignore  .pylintrc  BUILDING.md  CONTRIBUTING.md  MANIFEST  README.md  build  check  environment.yml  mkbld  nut2.py  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
demo/: demoups.py  test_expect.py  upsdemo.py
pynut2/: nut2.py
src/pynut2/: nut2.py  nut3.py
src/pynut3/: __init__.py  __init__.pyi  nut3.py  nut3.pyi
tests/: mockserver.py  test_nutclient.py  testclient.py
