# pyproject.toml

# Hatchling  https://packaging.python.org/en/latest/key_projects/#hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynut3"
description = "A Python3 abstraction class to access NUT servers for uninterruptible power supplies (UPS)."
version = "1.4.6" # latest production version
# version = "1.5.1" # latest testing version
dependencies = []
license = "GPL-3.0-only"
authors = [
  { name="Mausy5043" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Power (UPS)"
]

[project.urls]
"Homepage" = "https://github.com/Mausy5043/python-nut3"
"Bug Tracker" = "https://github.com/Mausy5043/python-nut3/issues"
